--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-vuejs-accessibility": "^1.2.0",
     "happy-dom": "^7.6.3",
     "husky": "^8.0.1",
+    "msw": "^0.47.4",
     "nuxt": "3.0.0-rc.12",
     "postcss": "^8.4.18",
     "prettier": "^2.7.1",
@@ -64,6 +65,7 @@
     "vitest": "^0.24.3",
     "vitest-fetch-mock": "^0.2.1",
     "vue": "^3.2.41",
-    "webpack": "^5.74.0"
+    "webpack": "^5.74.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
